--- a/src/content/docs/guide/setup.mdx
+++ b/src/content/docs/guide/setup.mdx
@@ -2,16 +2,17 @@
 title: SKALE Setup
 description: Quick wallet setup
 ---
+import {SchainDetails, Wallet} from '../../../index';
 
 ## Chain explanation
 
 ## Chain details
 
-import SchainDetails from '../../../components/schain_details.tsx';
-
 <SchainDetails/>
 
 ## Wallet connect
+
+<Wallet client:load/>
 
 ## Getting sFUEL
 
