starlight with Navbar setup

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/skale_lg.png
   actions:
     - text: SKALE Guide
-      link: /guide/network/
+      link: /network/intro/
       icon: right-arrow
       variant: primary
 ---
