Add Basic Navigation + Content Collection Folders

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/skale_logo_w.svg
   actions:
     - text: New to SKALE?
-      link: /quick-start/landing/
+      link: /quick-start
       icon: right-arrow
       variant: primary
     - text: Detailed Developer Docs
