Switch Logos Temporarily due to Astro Bug

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,7 +5,8 @@ template: splash
 hero:
   tagline: Build on SKALE with zero gas fees, instant finality, and top-tier DX
   image:
-    file: ../../assets/skale_logo_w.svg
+    alt: hi
+    file: ../../assets/skale_token_w.svg
   actions:
     - text: New to SKALE?
       link: /quick-start
