--- a/src/content/docs/learn/beginner/hub-chain.mdx
+++ b/src/content/docs/learn/beginner/hub-chain.mdx
@@ -36,9 +36,9 @@ These include the Calypso Innovation Hub, the Europa Liquidity Hub, the Nebula G
 
 | Public Name   | SKALE Manager Name         | Focus               | MTM Enabled | Link to Portal                                                       |
 | ------------- | -------------------------- | ------------------- | :---------: | :------------------------------------------------------------------: |
-| Calypso		| honorable-steel-rasalhague | General             | No          | [<Icon name="external" color="purple" size="1.25rem" />](https://portal.skale.space/chains/calyso) |
+| Calypso		| honorable-steel-rasalhague | General             | No          | [<Icon name="external" color="deeppink" size="1.25rem" />](https://portal.skale.space/chains/calyso) |
 | Europa		| elated-tan-skat            | Liquidity           | No          | [<Icon name="external" color="blue" size="1.25rem" />](https://portal.skale.space/chains/europa) |
-| Nebula		| green-giddy-denebola       | Gaming              | Yes         | [<Icon name="external" color="green" size="1.25rem" />](https://portal.skale.space/chains/nebula) |
+| Nebula		| green-giddy-denebola       | Gaming              | Yes         | [<Icon name="external" color="purple" size="1.25rem" />](https://portal.skale.space/chains/nebula) |
 | Titan 		| parallel-stormy-spica      | AI & ML             | Yes         | [<Icon name="external" color="orange" size="1.25rem" />](https://portal.skale.space/chains/titan)  |
 
 :::tip[Developer Note]
