Add Spellcheck, Fix Typos, Add Words, Update Flow and Pages for learn

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -23,7 +23,7 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
 
 ## Explore the Documentation
 
-Not sure where to go? No worries! We have selected a few of the most commonly visited areas of our docs for you to begin exloring!
+Not sure where to go? No worries! We have selected a few of the most commonly visited areas of our docs for you to begin exploring!
 
 <CardGrid>
 	<Card title="Quick Start" icon="add-document">
