--- a/src/content/docs/learn/calypso.mdx
+++ b/src/content/docs/learn/calypso.mdx
@@ -30,7 +30,7 @@ any project.
 - Pixudi: https://pixudi.com
 - Untitled Platformer: https://untitledplatformer.io
 
-## Oficial Links
+## Official Links
 
 - Website: https://calypsohub.network
 - X (formerly Twitter): https://twitter.com/CalypsoHub
