--- a/src/content/docs/learn/europa.mdx
+++ b/src/content/docs/learn/europa.mdx
@@ -12,13 +12,13 @@ is naturally inherited by a multi-chain network  —  **Liquidity Fragmentat
 
 ## Solving Liquidity Fragmentation
 
-A common occurence with new(er) blockchains and more specifically multi-chain networks is liquidity fragmentation and token fragmentation.
+A common occurrence with new(er) blockchains and more specifically multi-chain networks is liquidity fragmentation and token fragmentation.
 Fragmentation can occur when chains do not have access to a shared set of information, in this case tokens.
 If Europa did not exist, every SKALE Chain that wanted tokens to be moved between SKALE Chains would force their users to 
 constantly bridge between the Ethereum Mainnet and SKALE Chains, resulting in users having to pay gas fees to go between chains.
 
-Alternativley, projects could have all of their own tokens (e.g USDCa, USDCb, USDCc) bridge to Europa for DeFi, however, that results
-in liquidity fragementation which the community worked hard to avoid.
+Alternatively, projects could have all of their own tokens (e.g USDCa, USDCb, USDCc) bridge to Europa for DeFi, however, that results
+in liquidity fragmentation which the community worked hard to avoid.
 
 With the Europa Hub being the primary entrypoint for liquidity on SKALE today, all chains can benefit from
 a streamlined process for token movement. Tokens are bridged into Europa from Ethereum, at which point they can then be bridged again to
@@ -43,7 +43,7 @@ just a quick hop over to Europa to access the world of DeFi on SKALE and the res
 - Meson.Fi: https://meson.fi
 - Ruby.Exchange: https://ruby.exchange
 
-## Oficial Links
+## Official Links
 
 - GitHub: https://github.com/EuropaHub
 - Website: https://europahub.network
