--- a/src/content/docs/learn/hub-chain.mdx
+++ b/src/content/docs/learn/hub-chain.mdx
@@ -9,7 +9,7 @@ import { Icon } from '@astrojs/starlight/components';
 A SKALE Hub is a SKALE Chain designated for use by a specific group of projects or for use by projects in a particular category or industry.
 Hubs can be used to group together parties in a few different ways. Hubs can be used to:
 
-- group together projects in a similiar category
+- group together projects in a similar category
 - offer a variety of services to AppChains or other HubChains
 - make SKALE Chain compute available to projects that only need a fraction of a SKALE Chain
 - allow Enterprises to run multiple "dApps" on their own SKALE Chain, creating a single-owner Hub
