--- a/src/content/docs/learn/nebula.mdx
+++ b/src/content/docs/learn/nebula.mdx
@@ -36,6 +36,6 @@ This SKALE Chain being focused entirely on games and gaming utilities, Nebula is
 - TankWarsZone: https://skale-play.tankwars.zone
 - VoxelVerse: https://www.voxelverse.ca
 
-## Oficial Links
+## Official Links
 
 - Website: https://nebulachain.io/
