Add Dynamic Balances Loading for Testnets via QuickStart

--- a/src/content/docs/quick-start/select-a-chain.mdx
+++ b/src/content/docs/quick-start/select-a-chain.mdx
@@ -6,6 +6,7 @@ sidebar:
   order: 1
 ---
 import { SelectChain } from "../../../components/SelectChain";
+import { GasAndTokens } from "../../../components/GasAndTokens";
 
 Select a chain from the options below to learn more about it. 
 If you don't feel it's the perfect fit, no worries, join us in [Discord]() for additional
@@ -13,3 +14,5 @@ support on where to start building.
 
 <br />
 <SelectChain client:load />
+
+<GasAndTokens client:load />
