Resolve Render Issues with Balances for Gas And Toekns

--- a/src/content/docs/quick-start/build.mdx
+++ b/src/content/docs/quick-start/build.mdx
@@ -2,3 +2,32 @@
 title: Build
 description: Build on SKALE
 ---
+
+import { Card, CardGrid } from "@astrojs/starlight/components";
+
+## Build
+
+// Description
+
+<CardGrid>
+	<a style="text-decoration: none;"href="/quick-start/select-a-chain">
+		<Card title="1. Select a SKALE Chain">
+			Ready to start exploring and buidling on SKALE? Start by selecting a SKALE Chain
+		</Card>
+	</a>
+	<a style="text-decoration: none;"href="/quick-start/acquire-sfuel">
+		<Card title="2. Acquire sFUEL (Gas Token)">
+			Ready to build? Connect your wallet and grab some SKALE Fuel (Gas)
+		</Card>
+	</a>
+	<a style="text-decoration: none;"href="/quick-start/build">
+		<Card title="3. Build">
+			Learn more about the SKALE Specifics and ways to build or port your application.
+		</Card>
+	</a>
+	<a style="text-decoration: none;"href="/quick-start/go-live">
+		<Card title="4. Go-Live Process">
+			Ready to go-live? Learn about the processes to help take you to Mainnet
+		</Card>
+	</a>
+</CardGrid>
