--- a/src/content/docs/quick-start/go-live.mdx
+++ b/src/content/docs/quick-start/go-live.mdx
@@ -2,3 +2,17 @@
 title: Go Live
 description: Go Live
 ---
+
+## The Go Live Process
+
+If you are preparing to go live on to SKALE Mainnet, then
+the following steps can help expedite the process.
+
+Showcase your Work
+
+First, start by heading over to the SKALE Network Discord channel.
+Once there, show of your project in the #showcase-your-work channel.
+This will allow members of the SKALE Community to give feedback and enable
+you to start showcasing your game.
+
+> More to come later
