--- a/src/content/docs/quick-start/build.mdx
+++ b/src/content/docs/quick-start/build.mdx
@@ -11,8 +11,23 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
 ### Next Steps
 
 1. Deploy your contracts to your selected SKALE Testnet Chain
+{/*2. Make sure to checkout the SKALE Specifics*/}
 2. Explore the [tools](#tools) below
 3. Join us in [Discord](https://discord.com/invite/gM5XBy6) to ask questions and share your work.
+
+{/*### SKALE Specifics*/}
+
+{/*#### sFUEL Distribution*/}
+
+{/* API Distribution, Proof of Work, Custodial Contract Distribution */}
+
+{/*#### User Onboarding (Web2)*/}
+
+{/* Stardust, Invisible Wallets */}
+
+{/*#### User Onboarding (Web3)*/}
+
+{/* Metaport, Portal, Meson.Fi */}
 
 ### Tools
 <CardGrid>
