Fix Start Here Boxes

--- a/src/content/docs/quick-start/index.mdx
+++ b/src/content/docs/quick-start/index.mdx
@@ -19,19 +19,14 @@ Not sure where to go? No worries! We have selected the key parts of the process
 for you to jump between. Jump ahead to a section or keep scrolling to learn more about 
 selecting a SKALE Chain.
 
-<CardGrid>
+<CardGrid stagger>
 	<a style="text-decoration: none;"href="/quick-start/select-a-chain">
 		<Card title="1. Select a SKALE Chain">
-			Ready to start exploring and buidling on SKALE? Start by selecting a SKALE Chain
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/quick-start/acquire-sfuel">
-		<Card title="2. Acquire sFUEL (Gas Token)">
-			Ready to build? Connect your wallet and grab some SKALE Fuel (Gas)
+			Select a SKALE Chain and grab some testnet tokens
 		</Card>
 	</a>
 	<a style="text-decoration: none;"href="/quick-start/build">
-		<Card title="3. Build">
+		<Card title="2. Build">
 			Learn more about the SKALE Specifics and ways to build or port your application.
 		</Card>
 	</a>
