--- a/src/content/docs/quick-start/select-a-chain.mdx
+++ b/src/content/docs/quick-start/select-a-chain.mdx
@@ -5,6 +5,7 @@ description: Select a Chain
 sidebar:
   order: 1
 ---
+import { ToastContainer } from "react-toastify";
 import { SelectChain } from "../../../components/SelectChain";
 import { GasAndTokens } from "../../../components/GasAndTokens";
 
@@ -16,3 +17,18 @@ support on where to start building.
 <SelectChain client:load />
 
 <GasAndTokens client:load />
+
+{/*<ToastContainer
+  position="bottom-right"
+  autoClose={5000}
+  hideProgressBar={false}
+  newestOnTop={false}
+  closeOnClick
+  rtl={false}
+  pauseOnFocusLoss
+  draggable
+  pauseOnHover
+  theme="dark"
+  zIndex={1000000}
+  client:load
+/>*/}
