--- a/src/content/docs/tools/contracts/hardhat.mdx
+++ b/src/content/docs/tools/contracts/hardhat.mdx
@@ -3,10 +3,14 @@ title: Hardhat
 description: Intro to Hardhat
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
+import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
 
-## What is Hardhat?
-
-/// Content
+<ToolLayout
+	introParagraph="Hardhat is an EVM developer enivornment helping developers quickly and easily create, test, and deploy smart contracts. Hardhat is also home to a vibrant community offering a number of different plugins."
+	toolName="Hardhat"
+	toolLink="https://hardhat.org"
+	toolDocsLink="https://hardhat.org/docs"
+>
 
 ## Setup for a SKALE Chain
 
@@ -43,3 +47,4 @@ The next step...
 ## Extensions
 
 ### Using Contract Sizer
+</ToolLayout>
