Commit Recent Hardhat Changes

--- a/src/content/docs/tools/contracts/hardhat.mdx
+++ b/src/content/docs/tools/contracts/hardhat.mdx
@@ -31,8 +31,6 @@ mkdir hardhat-skale && cd hardhat-skale && npx hardhat init
 ```
 
 Select **Create a JavaScript project** and press return (enter) three times.
-</TabItem>
-</Tabs>
 
 ### Add SKALE Chain
 
@@ -47,4 +45,20 @@ The next step...
 ## Extensions
 
 ### Using Contract Sizer
+</TabItem>
+</Tabs>
+
+{/*### Add SKALE Chain
+
+The next step...
+
+## Deploy a Smart Contract
+
+// Deploy vs hardhat-deploy
+
+## Verify a Smart Contract
+
+## Extensions
+
+### Using Contract Sizer*/}
 </ToolLayout>
