Fix Bridge Content on Indx Page

--- a/src/content/docs/tools/index.mdx
+++ b/src/content/docs/tools/index.mdx
@@ -13,7 +13,7 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
 
 <CardGrid>
 	<a style="text-decoration: none;"href="/tools/bridges">
-		<Card title="Oracles">
+		<Card title="Bridges">
 			Enable messages and tokens to be moved with various bridges and libraries
 		</Card>
 	</a>
